Ensure that logo doesn't overlap and cause horizontal scrolling on smaller screens. Adjust font sizes so the code elements and button elements are visible.

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,7 @@
 .site-logo {
   max-width: 350px;
+
+  @include mobile {
+    max-width: 100%;
+  }
 }
